# giellaltconversiontools

./: README.md  pyproject.toml
docs/: unimorph.md
giellaltconversiontools/: __init__.py  giella2unimorph.py  hfst.py  lexc.py  tagmaps.py  ud.py  ud2lexc.py  unimorph.py  unimorph2fstlookup.py  unimorph2lexc.py  unimorph2yamltest.py  unimorphevalanalyser.py  vislcg2ud.py
scripts/: ccat2ud.bash  excluded.tags  generate-all.bash  generate-alphabets.bash  generate-from-lexc.bash  generate-word.bash  generate.bash
